--- a/MC-Dex/App.xaml
+++ b/MC-Dex/App.xaml
@@ -5,5 +5,46 @@
              StartupUri="MainWindow.xaml">
 
     <Application.Resources>
+        <!-- Général -->
+        <FontFamily x:Key="Minecraft">font\minecraft_font.ttf#Minecraft</FontFamily>
+        <Style TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
+        
+        <!-- Page ajouter -->
+        <Style TargetType="Border" x:Key="pageAjouter_borderGrid">
+            <Setter Property="CornerRadius" Value="20"/>
+            <Setter Property="BorderThickness" Value="5"/>
+            <Setter Property="Background" Value="#538f28"/>
+            <Setter Property="Margin" Value="0,5"/>
+        </Style>
+        <Style TargetType="Border" x:Key="pageAjouter_borderTextBox">
+            <Setter Property="CornerRadius" Value="15"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Margin" Value="2"/>
+            <Setter Property="BorderThickness" Value="4"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="pageAjouter_textBlock">
+            <Setter Property="Margin" Value="20,10"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="15"/>
+        </Style>
+        <Style TargetType="TextBox" x:Key="pageAjouter_textBox">
+            <Setter Property="Margin" Value="7"/>
+            <Setter Property="FontFamily" Value="font\minecraft_font.ttf#Minecraft"/>
+            <Setter Property="Background" Value="{x:Null}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
     </Application.Resources>
 </Application>
