--- a/MC-Dex/textBoxDescriptionUC.xaml
+++ b/MC-Dex/textBoxDescriptionUC.xaml
@@ -8,24 +8,10 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
 
-    <UserControl.Resources>
-        <Style TargetType="Border" x:Key="borderGrid">
-            <Setter Property="CornerRadius" Value="20"/>
-            <Setter Property="BorderThickness" Value="5"/>
-            <Setter Property="Background" Value="#538f28"/>
-            <Setter Property="Margin" Value="0,5"/>
-        </Style>
-        <Style TargetType="Border" x:Key="borderTextBox">
-            <Setter Property="CornerRadius" Value="15"/>
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="Margin" Value="2"/>
-            <Setter Property="BorderThickness" Value="4"/>
-        </Style>
-        <FontFamily x:Key="Minecraft">font\minecraft_font.ttf#Minecraft</FontFamily>
-    </UserControl.Resources>
+ 
     
     
-    <Border Style="{StaticResource borderGrid}">
+    <Border Style="{StaticResource pageAjouter_borderGrid}">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="160"/>
@@ -33,7 +19,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Text="Craft" Grid.Column="0" VerticalAlignment="Center" FontFamily="{StaticResource Minecraft}" Margin="20,10" Foreground="White" FontSize="15"/>
-            <Border Style="{StaticResource borderTextBox}" Grid.Column="1">
+            <Border Style="{StaticResource pageAjouter_borderTextBox}" Grid.Column="1">
                 <StackPanel Width="auto"  Orientation="Horizontal"  Margin="10" HorizontalAlignment="Center">
                     <Grid  VerticalAlignment="Center">
                         <Grid.Resources>
