--- a/MC-Dex/textBoxStatistiqueUC.xaml
+++ b/MC-Dex/textBoxStatistiqueUC.xaml
@@ -8,23 +8,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
 
-    <UserControl.Resources>
-        <Style TargetType="Border" x:Key="borderGrid">
-            <Setter Property="CornerRadius" Value="20"/>
-            <Setter Property="BorderThickness" Value="5"/>
-            <Setter Property="Background" Value="#538f28"/>
-            <Setter Property="Margin" Value="0,5"/>
-        </Style>
-        <Style TargetType="Border" x:Key="borderTextBox">
-            <Setter Property="CornerRadius" Value="15"/>
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="Margin" Value="2"/>
-            <Setter Property="BorderThickness" Value="4"/>
-        </Style>
-        <FontFamily x:Key="Minecraft">font\minecraft_font.ttf#Minecraft</FontFamily>
-    </UserControl.Resources>
 
-    <Border Style="{StaticResource borderGrid}">
+    <Border Style="{StaticResource pageAjouter_borderGrid}">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="160"/>
@@ -33,7 +18,7 @@
 
             <TextBlock Text="Statistiques" Grid.Column="0" VerticalAlignment="Center" FontFamily="{StaticResource Minecraft}" Margin="20,10" Foreground="White" FontSize="15"/>
 
-            <Border Style="{StaticResource borderTextBox}" Grid.Column="1" >
+            <Border Style="{StaticResource pageAjouter_borderTextBox}" Grid.Column="1" >
                 <StackPanel Margin="20,20">
                     <Grid  Name="Grid_stat" >
                         <Grid.ColumnDefinitions>
@@ -46,8 +31,6 @@
 
 
                         <local:ligneGridStatUC Grid.Row="0"/>
-
-
 
 
                     </Grid>
