--- a/MC-Dex/textBoxBaseUC.xaml
+++ b/MC-Dex/textBoxBaseUC.xaml
@@ -23,19 +23,19 @@
     </UserControl.Resources>
     
     
-    <Border CornerRadius="20" BorderThickness="5" Background="#538f28" Margin="0,5">
+    <Border Style="{StaticResource pageAjouter_borderGrid}">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="160"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Border Grid.Column="0" Margin="20,10" MaxHeight="40">
+            <Border Grid.Column="0" Margin="20,10" MaxHeight="40" Style="{StaticResource pageAjouter_borderTextBox}">
                 <TextBox Style="{StaticResource pageAjouter_textBox}"/>
             </Border>
             
-            <Border Grid.Column="1" Margin="2" >
-                <TextBox TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" Language="fr" TextChanged="TextBox_TextChanged" AcceptsTab="True"/>
+            <Border Grid.Column="1" Style="{StaticResource pageAjouter_borderTextBox}" >
+                <TextBox Style="{StaticResource pageAjouter_textBox}" TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" Language="fr" TextChanged="TextBox_TextChanged" AcceptsTab="True"/>
             </Border>
         </Grid>
     </Border>
