--- a/MC-Dex/textBoxCraftUC.xaml
+++ b/MC-Dex/textBoxCraftUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MC_Dex.textBoxDescriptionUC"
+﻿<UserControl x:Class="MC_Dex.textBoxCraftUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,6 @@
              xmlns:local="clr-namespace:MC_Dex"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
-
- 
     
     
     <Border Style="{StaticResource pageAjouter_borderGrid}">
@@ -18,7 +15,7 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Text="Craft" Grid.Column="0" VerticalAlignment="Center" FontFamily="{StaticResource Minecraft}" Margin="20,10" Foreground="White" FontSize="15"/>
+            <TextBlock Text="Craft" Grid.Column="0" Style="{StaticResource pageAjouter_textBlock}"/>
             <Border Style="{StaticResource pageAjouter_borderTextBox}" Grid.Column="1">
                 <StackPanel Width="auto"  Orientation="Horizontal"  Margin="10" HorizontalAlignment="Center">
                     <Grid  VerticalAlignment="Center">
