--- a/MC-Dex/App.xaml
+++ b/MC-Dex/App.xaml
@@ -46,5 +46,27 @@
             <Setter Property="Background" Value="{x:Null}"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
+
+
+        <!-- Page objet -->
+        <Style TargetType="TextBlock" x:Key="pageObjet_default">
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
+            <Setter Property="Foreground" Value="#C5C5C5"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="pageObjet_titrePartie">
+            <Setter Property="Margin" Value="20,30,20,7"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
+            <Setter Property="FontSize" Value="22"/>
+            <Setter Property="Foreground" Value="#C5C5C5"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="pageObjet_textePartie">
+            <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="Margin" Value="20,0"/>
+            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
     </Application.Resources>
 </Application>
