--- a/MC-Dex/pageObjet.xaml
+++ b/MC-Dex/pageObjet.xaml
@@ -5,32 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MC_Dex"
              mc:Ignorable="d" 
-             d:DesignHeight="950" d:DesignWidth="800">
+             d:DesignHeight="2000" d:DesignWidth="800">
 
 
-    <UserControl.Resources>
-        <Style TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Foreground" Value="#C5C5C5"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
-        <Style TargetType="TextBlock" x:Key="titre_partie">
-            <Setter Property="Margin" Value="20,30,20,7"/>
-            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
-            <Setter Property="FontSize" Value="22"/>
-            <Setter Property="Foreground" Value="#C5C5C5"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-        </Style>
-        <Style TargetType="TextBlock" x:Key="texte_partie">
-            <Setter Property="TextWrapping" Value="Wrap"/>
-            <Setter Property="Margin" Value="20,0"/>
-            <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="Foreground" Value="White"/>
-        </Style>
-        
-    </UserControl.Resources>
 
     <DockPanel>
 
@@ -52,67 +29,29 @@
                     </Grid.RowDefinitions>
 
                     <Image Grid.Column="0" Grid.RowSpan="2" Grid.Row="0" Source="img\Terre.png" Height="110" Width="110" Margin="0,0,20,0"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Terre" FontSize="40"/>
-                    <TextBlock Grid.Column="1" Grid.Row="1" Text="Dirt"  FontSize="35" Foreground="#FF979797"/>
-                    <TextBlock Grid.Column="2" Grid.Row="0" Text="Identifiant"  FontSize="22"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Terre" FontSize="40" Style="{StaticResource pageObjet_default}"/>
+                        <TextBlock Grid.Column="1" Grid.Row="1" Text="Dirt"  FontSize="35" Foreground="#FF979797" Style="{StaticResource pageObjet_default}"/>
+                    <TextBlock Grid.Column="2" Grid.Row="0" Text="Identifiant"  FontSize="22" Style="{StaticResource pageObjet_default}"/>
                 </Grid>
 
                 <Rectangle Width="Auto" Height="2" Fill="White" Margin="15,5"/>
 
-                    <TextBlock Text="Description" Style="{StaticResource titre_partie}" Margin="20,10,20,7"/>
-                <TextBlock Style="{StaticResource texte_partie}" Text="Voici un exemple de description type qu'il pourrait y avoir."/>
-
-                    
-               <local:craftUC ImageName4="img\Planche.png" ImageName6="img\Planche.png"
-                                   ImageName7="img\Planche.png" ImageName8="img\Planche.png" ImageName9="img\Planche.png" ImageName10="img\Bateau.png"/>
-
                 
-                    <TextBlock Text="Statistiques" Style="{StaticResource titre_partie}"/>
-                    <Grid Margin="20,10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.Resources>
-                            <SolidColorBrush x:Key="brush" Color="#C5C5C5"/>
-                            <Style TargetType="Image">
-                                <Setter Property="Width" Value="60"/>
-                            </Style>
-                            <Style TargetType="TextBlock">
-                                <Setter Property="Margin" Value="20,5"/>
-                                <Setter Property="FontFamily" Value="{StaticResource Minecraft}"/>
-                                <Setter Property="FontSize" Value="18"/>
-                                <Setter Property="Foreground" Value="White"/>
-                                <Setter Property="HorizontalAlignment" Value="Center"/>
-                            </Style>
-                        </Grid.Resources>
+                
+                <TextBlock Text="Description" Style="{StaticResource pageObjet_titrePartie}" Margin="20,10,20,7"/>
+                    <TextBlock Text="Voici un exemple de description type qu'il pourrait y avoir." Style="{StaticResource pageObjet_textePartie}"/>
 
-                        <Border Grid.Column="0" Grid.Row="0"  BorderBrush="Gray" BorderThickness="0,0,1,1" Background="Gray">
-                            <TextBlock Text="Nom" Grid.Column="0"/>
-                        </Border>
-                        <Border Grid.Column="1" Grid.Row="0" BorderBrush="Gray" BorderThickness="1,0,0,1" Background="Gray">
-                            <TextBlock Text="Valeur" Grid.Column="1"/>
-                        </Border>
 
-                        <Border Grid.Column="0" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="0,1,1,1">
-                            <TextBlock Text="Durete" Grid.Column="0"/>
-                        </Border>
-                        <Border Grid.Column="1" Grid.Row="1" BorderBrush="{StaticResource brush}" BorderThickness="1,1,0,1">
-                            <TextBlock Text="3.5" Grid.Column="1"/>
-                        </Border>
 
-                        <Border Grid.Column="0" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="0,1,1,0">
-                            <TextBlock Text="Durete" Grid.Column="0"/>
-                        </Border>
-                        <Border Grid.Column="1" Grid.Row="2" BorderBrush="{StaticResource brush}" BorderThickness="1,1,0,0">
-                            <TextBlock Text="3.5" Grid.Column="1"/>
-                        </Border>
-                    </Grid>
+
+
+                    <local:craftUC NameTypeCraft="Craft"/>
+
+
+
+                    <local:statistiqueUC/>
+
+                    <local:craftUC NameTypeCraft="Fabrication"/>
 
 
 
