--- a/MC-Dex/pageAjouter.xaml
+++ b/MC-Dex/pageAjouter.xaml
@@ -55,9 +55,9 @@
 
                                 <TextBlock Text="Image" Grid.Column="0" Style="{StaticResource pageAjouter_textBlock}"/>
                         <Border Style="{StaticResource pageAjouter_borderTextBox}" Grid.Column="1" >
-                            <TextBlock Margin="7" Text="/Chemin/du/fichier/selectionne" Foreground="#FF979797" FontFamily="Arial"/>
+                            <TextBlock Margin="7" x:Name="TextBlockPathFile" Text="/Chemin/du/fichier/selectionne" Foreground="#FF979797" FontFamily="Arial"/>
                         </Border>
-                        <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0">
+                        <Button Width="50" Height="35" Grid.Column="2" BorderThickness="0" Click="Button_OpenFile">
                             <Button.Background>
                                 <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
                             </Button.Background>
@@ -67,19 +67,63 @@
                 </Border>
 
 
-                        <local:textBoxCraftUC/>
-
+                        <!--<local:textBoxCraftUC/>
                         <local:textBoxStatistiqueUC/>
-
-
-
-                        <local:textBoxBaseUC/>
+                        <local:textBoxBaseUC/>-->
+                        
                     </StackPanel>
 
                     <Rectangle Fill="White" Height="3" Margin="5,20"/>
-                    <local:boutonAjoutUC Message="Ajouter un craft"/>
+                
+                
+                    <!--<local:boutonAjoutUC Message="Ajouter un craft"/>
                     <local:boutonAjoutUC Message="Ajouter un texte"/>
-                    <local:boutonAjoutUC Message="Ajouter une / des statistique(s)"/>
+                    <local:boutonAjoutUC Message="Ajouter une / des statistique(s)"/>-->
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Button Width="50" Height="35" Grid.Column="0" BorderThickness="0" Click="Button_AjouterCraft">
+                            <Button.Background>
+                                <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
+                            </Button.Background>
+                        </Button>
+
+                        <TextBlock Text="Ajouter un craft" Grid.Column="1" Margin="5,0,20,0" Style="{StaticResource pageAjouter_textBlock}"/>
+                    </Grid>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Button Width="50" Height="35" Grid.Column="0" BorderThickness="0" Click="Button_AjouterTexte">
+                            <Button.Background>
+                                <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
+                            </Button.Background>
+                        </Button>
+
+                        <TextBlock Text="Ajouter un texte" Grid.Column="1" Margin="5,0,20,0" Style="{StaticResource pageAjouter_textBlock}"/>
+                    </Grid>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Button Width="50" Height="35" Grid.Column="0" BorderThickness="0" Click="Button_AjouterStat">
+                            <Button.Background>
+                                <ImageBrush ImageSource="img\ajouter.png" Stretch="Uniform"/>
+                            </Button.Background>
+                        </Button>
+
+                        <TextBlock Text="Ajouter une / des statistique(s)" Grid.Column="1" Margin="5,0,20,0" Style="{StaticResource pageAjouter_textBlock}"/>
+                    </Grid>
 
                 </StackPanel>
                 
@@ -89,10 +133,11 @@
             
             
             
-            <Border Grid.Column="1" VerticalAlignment="Top" Height="50" Margin="40,15,20,20" Style="{StaticResource pageAjouter_borderGrid}">
-            <Button Background="{x:Null}" BorderThickness="0">
-                <TextBlock Text="VALIDER" Style="{StaticResource pageAjouter_textBlock}"/>
-            </Button>
+            <Border Grid.Column="1" VerticalAlignment="Top" Height="50" Margin="40,15,20,20" Style="{StaticResource pageAjouter_borderGrid}" >
+
+                <Button Background="{x:Null}" BorderThickness="0">
+                    <TextBlock Text="VALIDER" Style="{StaticResource pageAjouter_textBlock}"/>
+                </Button>
 
             </Border>
         </Grid>
